[package]
name = "firefly_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
prost = "0.11"
tonic = "0.8"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.tower-http]
version = "0.4"
features = ["add-extension"]

[build-dependencies]
tonic-build = "0.8"
