[package]
name = "firefly_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
prost = "0.11"
tonic = "0.8"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.tower-http]
version = "0.4"
features = ["add-extension"]

[build-dependencies]
tonic-build = "0.8"

# Alpine
[package.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
  "apt update",
  "apt install -y unzip",
  "curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v22.2/protoc-22.2-linux-aarch_64.zip",
  "unzip protoc-22.2-linux-aarch_64.zip -d $HOME/",
  "cp $HOME/bin/protoc /usr/bin/",
]

# Debian
[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
  "apt update",
  "apt install -y unzip",
  "curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v22.2/protoc-22.2-linux-aarch_64.zip",
  "unzip protoc-22.2-linux-aarch_64.zip -d $HOME/",
  "cp $HOME/bin/protoc /usr/bin/",
]
