[package]
name = "firefly_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
palette = "0.6"
prost = "0.11"
spidev = "0.5"
tonic = "0.8"
dotenvy = "0.15"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.tower-http]
version = "0.4"
features = ["add-extension"]

[build-dependencies]
tonic-build = "0.8"

[package.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
  "apt-get update",
  "apt-get install -y protobuf-compiler"
]
